--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -27,6 +27,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  background-color: transparent;
   ion-spinner {
     margin-top: 20%;
     transform: scale(3);
@@ -101,18 +102,11 @@ ion-card {
   border-radius: 20px;
 }
 
-.btn-min-max {
-  border-radius: 10px;
-  padding: 3px;
-  border: 1px solid var(--ion-color-medium);
-  max-width: 100px;
-  text-align: center;
-}
-
 .btn-pagination {
+  margin-left: 5%;
+  margin-right: 5%;;
   background-color: white;
   border-radius: 50px;
-  width: 200px;
   .text {
     top: 0;
     bottom: 0;
