--- a/src/app/pages/manager/manager.page.html
+++ b/src/app/pages/manager/manager.page.html
@@ -5,5 +5,35 @@
 </ion-header>
 
 <ion-content>
-  
+  <ion-grid>
+    <ion-row>
+      <ion-col>
+        <ion-card>
+          <ion-card-content>
+            <ion-datetime
+              (ionChange)="onSelectDate($event)"
+              locale="pt-BR"
+              presentation="date"
+            ></ion-datetime>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col>
+        <ion-list>
+          <ion-list-header>
+            <ion-title>Solicitações de Ajuste</ion-title>
+          </ion-list-header>
+          <ion-card *ngFor="let item of listAdjustment">
+            <ion-card-content>
+              <ion-card-title>{{ item.nameUser }}</ion-card-title>
+              <ion-card-subtitle
+                >Data da solicitação: {{ item.dateSolicitation | date:
+                'dd/MM/YYYY' }}</ion-card-subtitle
+              >
+            </ion-card-content>
+          </ion-card>
+        </ion-list>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
