--- a/src/app/pages/config/config.page.html
+++ b/src/app/pages/config/config.page.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header mode="md">
   <ion-toolbar>
     <ion-buttons>
       <ion-back-button></ion-back-button>
@@ -7,7 +7,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content mode="md">
   <ion-card button>
     <ion-card-content>
       <ion-card-subtitle>Meus dados</ion-card-subtitle>
@@ -15,28 +15,62 @@
     </ion-card-content>
   </ion-card>
   <ion-card button>
-    <ion-card-content>
+    <ion-card-content *ngIf="dataUser?.manager?.userName != null">
       <ion-card-subtitle>Meu Gestor</ion-card-subtitle>
       <ion-card-title>{{ dataUser?.manager?.userName }}</ion-card-title>
     </ion-card-content>
   </ion-card>
-  <ion-list>
-    <ion-list-header>
-      <ion-title>Selecion o Gestor</ion-title>
-    </ion-list-header>
-    <ion-searchbar
-      (ionChange)="onChangeSearch($event)"
-      placeholder="Buscar gestor"
-      mode="ios"
-    ></ion-searchbar>
-    <ion-radio-group (ionChange)="onChangeRadioGroupManagers($event)" [(ngModel)]="dataManager">
-      <ion-item *ngFor="let manager of listManagers">
-        <ion-title>{{ manager?.userName.split('@ti.com') }}</ion-title>
-        <ion-radio [value]="manager"></ion-radio>
-      </ion-item>
-    </ion-radio-group>
-  </ion-list>
-  <ion-button expand="full" shape="round" (click)="onClickSave()"
-    >Salvar</ion-button
-  >
+  <!---->
+  <div *ngIf="dataUser?.typeUser == 'COLABORADOR'">
+    <ion-list>
+      <ion-list-header>
+        <ion-title>Selecion o Gestor</ion-title>
+      </ion-list-header>
+      <ion-searchbar
+        (ionChange)="onChangeSearch($event)"
+        placeholder="Buscar gestor"
+        mode="ios"
+      ></ion-searchbar>
+      <ion-radio-group
+        (ionChange)="onChangeRadioGroupManagers($event)"
+        [(ngModel)]="dataManager"
+      >
+        <ion-item *ngFor="let manager of listManagers">
+          <ion-title>{{ manager?.userName.split('@ti.com') }}</ion-title>
+          <ion-radio [value]="manager"></ion-radio>
+        </ion-item>
+      </ion-radio-group>
+    </ion-list>
+    <ion-button expand="full" shape="round" (click)="onClickSaveDataManager()"
+      >Adicionar como meu Gestor</ion-button
+    >
+  </div>
+
+  <form>
+    <ion-item>
+      <ion-label position="stacked">Seu nome</ion-label>
+      <ion-input
+        #inputName
+        type="name"
+        placeholder="Digite seu nome"
+        minlength="3"
+        maxlength="100"
+        required
+      ></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Seu ID</ion-label>
+      <ion-input
+        #inputID
+        type="text"
+        placeholder="Digite seu ID"
+        minlength="3"
+        maxlength="30"
+        required
+      ></ion-input>
+    </ion-item>
+  </form>
+  <ion-button expand="full" shape="round" (click)="onClickSaveDataUser()"
+      >Salvar Dados</ion-button
+    >
 </ion-content>
