--- a/src/app/pages/manager/manager.page.html
+++ b/src/app/pages/manager/manager.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Painel de Gestão</ion-title>
+    <ion-buttons>
+      <ion-title>Painel de Gestão</ion-title>
+      <ion-button (click)="showModalSettings()">
+        <ion-icon slot="icon-only" name="settings-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -10,20 +15,38 @@
       <ion-col>
         <ion-card>
           <ion-card-content>
+            <ion-label position="stacked">Calendário</ion-label>
             <ion-datetime
               (ionChange)="onSelectDate($event)"
               locale="pt-BR"
               presentation="date"
             ></ion-datetime>
+            <ion-item>
+              <ion-label position="stacked">Filtro</ion-label>
+              <ion-select
+                #ionSelectStatus
+                (ionChange)="onChangeStatus($event)"
+                placeholder="Filtrar por status"
+                cancelText="Cancelar"
+                okText="Filtrar"
+              >
+                <ion-select-option
+                  *ngFor="let status of listTypeStatus"
+                  [value]="status"
+                  >{{ status }}</ion-select-option
+                >
+              </ion-select>
+            </ion-item>
           </ion-card-content>
         </ion-card>
       </ion-col>
       <ion-col>
+        <ion-searchbar mode="ios" placeholder="Buscar por nome"></ion-searchbar>
         <ion-list>
           <ion-list-header>
             <ion-title>Solicitações de Ajuste</ion-title>
           </ion-list-header>
-          <ion-card *ngFor="let item of listAdjustment">
+          <ion-card button (click)="onClickDetailAdjustment(item)" *ngFor="let item of listAdjustment">
             <ion-card-content>
               <ion-card-title>{{ item.nameUser }}</ion-card-title>
               <ion-card-subtitle
