tela gestor finalizada

--- a/src/app/components/card-point/card-point.component.html
+++ b/src/app/components/card-point/card-point.component.html
@@ -1,3 +1,37 @@
-<p>
-  card-point works!
-</p>
+<ion-accordion *ngFor="let point of listPoints">
+  <ion-item class="card-point" slot="header">
+    <h1 class="title">
+      {{ point?.hourPoint | date: "hh:mm a" }} {{ point?.status }}
+    </h1>
+  </ion-item>
+  <ion-list slot="content">
+    <div class="container-ajust">
+      <form>
+        <ion-datetime
+          (ionChange)="onChangeDateTime($event)"
+          #dateTime
+          showDefaultTimeLabe="false"
+          [time-label]="'assss'"
+          locale="pt-BR"
+          presentation="date-time"
+          [value]="point?.hourPoint"
+        ></ion-datetime>
+      </form>
+      <div *ngIf="dataUser.typeUser != 'COLABORADOR'" >
+        <ion-button
+          (click)="onClickSaveEditPoint(point)"
+          shape="round"
+          size="small"
+          >Salvar</ion-button
+        >
+        <ion-button
+          (click)="onClickRemovePoint(point)"
+          color="danger"
+          shape="round"
+          size="small"
+          >Excluir</ion-button
+        >
+      </div>
+    </div>
+  </ion-list>
+</ion-accordion>
