--- a/src/app/pages/adjustment-point/adjustment-point.page.html
+++ b/src/app/pages/adjustment-point/adjustment-point.page.html
@@ -263,11 +263,9 @@
       </ion-accordion-group>
     </ion-list>
     <br />
-    <ion-button (click)="onClickSend()" shape="round" color="tertiary"
-      >
+    <ion-button (click)="onClickSend()" shape="round" color="tertiary">
       <ion-label color="light">Enviar Solicitação</ion-label>
-      </ion-button
-    >
+    </ion-button>
     <br />
   </div>
 </ion-content>
