--- a/src/global.scss
+++ b/src/global.scss
@@ -16,7 +16,7 @@
 @import "~@ionic/angular/css/normalize.css";
 @import "~@ionic/angular/css/structure.css";
 @import "~@ionic/angular/css/typography.css";
-@import '~@ionic/angular/css/display.css';
+@import "~@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
 @import "~@ionic/angular/css/padding.css";
@@ -25,16 +25,15 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
-
-ion-card{
+ion-card {
     box-shadow: rgb(0 0 0 / 12%) 0px 4px 16px;
     border-radius: 20px;
 }
 
-ion-title{
+ion-title {
     color: black;
 }
 
-ion-label{
+ion-label {
     color: black;
 }
