--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -28,11 +28,21 @@
         ></ion-input>
       </ion-item>
       <br />
-      <ion-button routerLink="/create-account" expand="full" color="primary" shape="round"
-        >Criar uma conta</ion-button
-      >
-      <ion-button (click)="onClickLogin()" [disabled]="!formSign.valid" expand="full" color="primary" shape="round"
+      <ion-button
+        (click)="onClickLogin()"
+        [disabled]="!formSign.valid"
+        expand="full"
+        color="primary"
+        shape="round"
         >Entrar</ion-button
+      >
+      <br />
+      <ion-button
+        routerLink="/create-account"
+        expand="full"
+        color="primary"
+        shape="round"
+        >Criar uma conta</ion-button
       >
     </form>
   </div>
