--- a/src/app/components/card-point-day-manager/card-point-day-manager.component.html
+++ b/src/app/components/card-point-day-manager/card-point-day-manager.component.html
@@ -12,7 +12,7 @@
       }}</ion-card-subtitle
     >
   </ion-card-header>
-  <ion-card-content [hidden]="toggleBtn">
+  <ion-card-content [hidden]="toggleBtn == false">
     <ion-breadcrumbs>
       <ion-breadcrumb *ngFor="let item of listPointsDay">
         <ion-icon name="alarm-outline"></ion-icon>
